k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp-svc
spec:
  selector:
    app: goapp
  ports:
  - port: 4001
    targetPort: 80
