k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapp-ingress
spec:
  rules:
  - host: teste-devops.telefonicabigdata.com
    http:
      paths:
      - backend: 
          serviceName: goapp-svc
          servicePort: 80
